--- a/css/styles.css
+++ b/css/styles.css
@@ -1056,7 +1056,7 @@ body.dark-mode .option-button:hover:not(.active) {
         border: none;
         cursor: pointer;
         text-align: center;
-        margin-top: 15px;
+        margin-top: 3px;
         transition: background-color 0.3s;
     }
     
